# generator-anc

./: .gitignore  CMakeLists.txt  README.md
docs/: bring-up-runbook.md  make_annotated_boards.py  make_blueprint.py  make_board_pinout.py  make_connections.py  make_demo.py  make_photo_wiring.py  make_teensy_max.py  output-stage.md  spark-tach.md
firmware/: README.md
firmware/esp12e_dashboard/: esp12e_dashboard.ino  live.html  page_html.h
firmware/esp_passthrough/: esp_passthrough.ino
firmware/generator_anc_teensy/: engine_order_canceller.hpp  generator_anc_teensy.ino
include/eoc/: engine_order_canceller.hpp
sim/: genset_sim.cpp  replay_recording.cpp  wav.hpp
tasks/: todo.md
tests/: minitest.hpp  test_eoc.cpp
tools/: embed_page.py  fan_anc_test.py  mock_esp.py
webguide/: Dashboard.jsx  Tuner.jsx  WiringGuide.jsx  app.jsx  components.jsx  data.js  genset_spectrum.js  index.html  style.css
